<resources>
    <string name="app_name">Banco Digital</string>

    <!--    Generic-->
    <string name="text_name_empty">Digite seu nome</string>
    <string name="text_email_empty">Digite seu e-mail</string>
    <string name="text_phone_empty">Digite seu telefone</string>
    <string name="text_phone_invalid">Digite um telefone válido</string>
    <string name="text_password_empty">Digite sua senha</string>
    <string name="text_fields_empty">Preencha todos os campos</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="text_formated_value">R$ %1$s</string>

    <!--    BottomSheet-->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Entendi</string>

    <!--    LoginFragment-->
    <string name="text_hint_email_login_fragment">E-mail</string>
    <string name="text_hint_password_login_fragment">Password</string>
    <string name="text_btn_login_fragment">Entrar</string>
    <string name="text_btn_register_login_fragment">Criar conta</string>
    <string name="text_btn_recover_login_fragment">Recuperar conta</string>

    <!--    RecoverFragment-->
    <string name="text_title_toolbar_recover_fragment">Recuperar conta</string>
    <string name="text_message_recover_fragment">Digite seu e-mail que te enviaremos um link \npara você alterar sua senha.</string>
    <string name="text_label_email_recover_fragment">E-mail</string>
    <string name="text_hint_email_recover_fragment">Digite seu email</string>
    <string name="text_btn_send_email_recover_fragment">Enviar email</string>

    <!--    RegisterFragment-->
    <string name="text_title_toolbar_register_fragment">Criar conta</string>
    <string name="text_label_name_register_fragment">Nome</string>
    <string name="text_hint_name_register_fragment">Digite seu nome</string>
    <string name="text_label_email_register_fragment">E-mail</string>
    <string name="text_hint_email_register_fragment">Digite seu email</string>
    <string name="text_label_phone_register_fragment">Telefone</string>
    <string name="text_hint_phone_register_fragment">Digite seu telefone</string>
    <string name="text_label_password_register_fragment">Senha</string>
    <string name="text_label_confirm_password_register_fragment">Confirme a senha</string>
    <string name="text_bottom_sheet_confirm_password">Senhas não confere</string>
    <string name="text_hint_password_register_fragment">Digite uma senha</string>
    <string name="text_btn_register_fragment">Cadastrar</string>


    <!--    ProfileFragment-->
    <string name="text_title_toolbar_profile_fragment">Perfil</string>
    <string name="text_label_name_profile_fragment">Nome</string>
    <string name="text_hint_name_profile_fragment">Digite seu nome</string>
    <string name="text_label_email_profile_fragment">E-mail</string>
    <string name="text_hint_email_profile_fragment">Digite seu email</string>
    <string name="text_label_phone_profile_fragment">Telefone</string>
    <string name="text_hint_phone_profile_fragment">Digite seu telefone</string>
    <string name="text_btn_profile_fragment">Salvar</string>
    <string name="text_message_save_sucess_profile_fragment">Perfil salvo com sucesso</string>

    <string name="text_message_camera_denied_profile_fragment">Para que você capture imagens utilizando a câmera precisaremos da permissão. Acesse as configurações de permissões e habilite a pemissão.</string>
    <string name="text_message_gallery_denied_profile_fragment">Para que você carregue imagens utilizando a galeria precisaremos da permissão. Acesse as configurações de permissões e habilite a pemissão.</string>

    <string name="text_title_bottom_sheet_profile">Adicionar imagem de perfil</string>
    <string name="text_message_bottom_sheet_profile">Escolha uma das opções abaixo para adicionar\n uma imagem de perfil.</string>
    <string name="text_button_camera_bottom_sheet_profile">Câmera</string>
    <string name="text_button_gallery_bottom_sheet_profile">Galeria</string>

    <!--    RecoverFragment-->
    <string name="text_message_send_email_sucess_recover_fragment">Email enviado com sucesso.</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!--    HomeFragment-->
    <string name="text_message_empty_transactions_home_fragment">Nenhuma transação efetuada.</string>

    <!--    DepositReceiptFragment-->
    <string name="text_title_toolbar_deposit_receipt_fragment">Recibo</string>
    <string name="text_title_deposit_receipt_fragment">Depósito efetuado\n com sucesso!</string>
    <string name="text_sub_title_deposit_receipt_fragment">Seu depósito ficará disponível em até 3 dias úteis.</string>
    <string name="text_code_transaction_deposit_receipt_fragment">Código Transasão</string>
    <string name="text_date_transaction_deposit_receipt_fragment">Data depósito</string>
    <string name="text_amount_transaction_deposit_receipt_fragment">Valor depósito</string>
    <string name="text_btn_transaction_deposit_receipt_fragment">Continuar</string>

    <!--    RechargeReceiptFragment-->
    <string name="text_title_toolbar_recharge_receipt_fragment">Recibo</string>
    <string name="text_title_recharge_receipt_fragment">Recarga efetuada\n com sucesso!</string>
    <string name="text_sub_title_recharge_receipt_fragment">Seu crédito estará disponível em alguns minutos.</string>
    <string name="text_code_transaction_recharge_receipt_fragment">Código Transasão</string>
    <string name="text_date_transaction_recharge_receipt_fragment">Data recarga</string>
    <string name="text_amount_transaction_recharge_receipt_fragment">Valor recarga</string>
    <string name="text_amount_phone_recharge_receipt_fragment">Número</string>
    <string name="text_btn_transaction_recharge_receipt_fragment">Continuar</string>

    <!--    RechargeFormFragment-->
    <string name="text_title_toolbar_recharge_form_fragment">Recarga</string>
    <string name="text_title_amount_recharge_form_fragment">Valor da recarga</string>
    <string name="text_label_phone_number_recharge_form_fragment">Insira o número</string>
    <string name="text_hint_phone_number_recharge_form_fragment">(11) 99999-9999</string>
    <string name="text_btn_transaction_recharge_form_fragment">Confirmar</string>
    <string name="text_message_invalid_value_recharge_form_fragment">Por favor, digite um valor maior ou igual que R$ 10,00</string>

    <!--    ExtractFragment-->
    <string name="text_title_toolbar_extract_fragment">Extrato</string>
    <string name="text_message_empty_transactions_extract_fragment">Nenhuma transação efetuada.</string>

    <!--    TransferUserListFragment-->
    <string name="text_title_toolbar_transfer_user_list_fragment">Usuários</string>
    <string name="text_message_empty_list_transfer_user_list_fragment">Nenhum usuário encontrado.</string>

    <!--    TransferFormFragment-->
    <string name="text_title_toolbar_transfer_form_fragment">Transferência</string>
    <string name="text_sub_title_transfer_form_fragment">Informe o valor a ser transferido.</string>
    <string name="text_button_continue_transfer_form_fragment">Continuar</string>
    <string name="text_message_empty_amount_transfer_form_fragment">Informe o valor a ser transferido.</string>

    <!--    ConfirmTransferFragment-->
    <string name="text_title_toolbar_confirm_transfer_fragment">Transferência</string>
    <string name="text_message_confirm_transfer_fragment">Verifique os dados antes de confirmar a transferência.</string>
    <string name="text_message_not_reversed_confirm_transfer_fragment">Após confirmar a transferência não \nserá possível desfazê-la</string>
    <string name="text_message_recipient_confirm_transfer_fragment">Receberá a transferência</string>
    <string name="text_label_amount_confirm_transfer_fragment">Valor transferência</string>
    <string name="text_button_confirm_transfer_fragment">Confirmar</string>
    <string name="text_message_insufficient_balance_confirm_transfer_fragment">Saldo insuficiente para realizar a transferência.</string>

    <!--    ReceiptTransferFragment-->
    <string name="text_title_toolbar_receipt_transfer_fragment">Recibo</string>
    <string name="text_message_receipt_transfer_fragment">Transferência efetuada \ncom sucesso!</string>
    <string name="text_message_time_receipt_transfer_fragment">Transferência realizada com sucesso. A previsão de crédito na conta de destino é de até 30 minutos.</string>
    <string name="text_code_transaction_receipt_transfer_fragment">Código Transasão</string>
    <string name="text_date_transaction_receipt_transfer_fragment">Data transferência</string>
    <string name="text_amount_transaction_receipt_transfer_fragment">Valor transferência</string>
    <string name="text_message_received_receipt_transfer_fragment">Enviou a transferência</string>
    <string name="text_message_sent_receipt_transfer_fragment">Receberá a transferência</string>
    <string name="text_btn_transaction_receipt_transfer_fragment">Continuar</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>