<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".presenter.auth.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="8dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_title_toolbar_register_fragment" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp">

            <EditText
                android:id="@+id/editNameRegister"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_person_24"
                android:hint="@string/text_label_name_register_fragment"
                android:inputType="text" />

            <EditText
                android:id="@+id/editEmailRegister"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_email_24"
                android:hint="@string/text_label_email_register_fragment"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editPhoneRegister"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_phone_android_24"
                android:hint="@string/text_label_phone_register_fragment"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editPasswordRegister"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_lock_24"
                android:hint="@string/text_label_password_register_fragment"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editPasswordConfirmRegister"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_lock_24"
                android:hint="@string/text_label_confirm_password_register_fragment"
                android:inputType="textPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button"
                android:text="@string/text_btn_register_fragment"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:indeterminateTint="@color/color_default"
                android:visibility="invisible"
                tools:visibility="visible" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>